--- a/MDK-ARM/Big_Windmill/Big_Windmill.build_log.htm
+++ b/MDK-ARM/Big_Windmill/Big_Windmill.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.36.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
+Target DLL:      CMSIS_AGDI.dll V1.33.0.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
@@ -27,20 +27,7 @@ Project File Date:  07/26/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Big_Windmill'
-compiling main.c...
-../Core/Src/main.c(137): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	b = 2.09 - a;
-../Core/Src/main.c(159): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			speed = ((a * (sinf(c*t))) + b) * 9.615 * 38.406;
-../Core/Src/main.c(162): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  				speed = - ((a * (sinf(c*t))) + b) * 9.615 * 38.406;
-../Core/Src/main.c(176): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			speed = - ((a * (sinf(c*t))) + b) * 9.615 * 38.406;			
-../Core/Src/main.c: 4 warnings, 0 errors
-linking...
-Program Size: Code=13064 RO-data=500 RW-data=64 ZI-data=2776  
-FromELF: creating hex file...
-"Big_Windmill\Big_Windmill.axf" - 0 Error(s), 4 Warning(s).
+"Big_Windmill\Big_Windmill.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -64,7 +51,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
